fix: overflow of the review page on mobile screen.

--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-position:  center;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .review-container::after {
